--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
               <h1>
                 Chien-Yi Wang
               </h1>
-              <p>I am a Senior Research SDE at Microsoft AI R&D Center in Taiwan. I had 6+ years experience specializing in computer vision research, deep learning-based model optimization, and machine learning service integration. My research focus is mainly on face recognition, face anti‑spoofing, and 2D/3D scene understanding. Interested in revolutionizing a machine learning system from the bottom‑up, devising better problem‑solving methods for challenging tasks, and learning new technologies and tools if the need arises.
+              <p>I am a Senior Research SDE at <a href="https://news.microsoft.com/apac/2018/01/12/microsoft-launches-artificial-intelligence-research-hub-taiwan/">Microsoft AI R&D Center</a> in Taiwan. I had 6+ years experience specializing in computer vision research, deep learning-based model optimization, and machine learning service integration. My research focus is mainly on face recognition, face anti‑spoofing, and 2D/3D scene understanding. Interested in revolutionizing a machine learning system from the bottom‑up, devising better problem‑solving methods for challenging tasks, and learning new technologies and tools if the need arises.
               </p>
               <p style="text-align:center">
                 <a href="https://github.com/chienyiwang">GitHub</a> &nbsp;/&nbsp;
