--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,11 @@
               <p>I am a Senior Research SDE at <a href="https://news.microsoft.com/apac/2018/01/12/microsoft-launches-artificial-intelligence-research-hub-taiwan/">Microsoft AI R&D Center</a> in Taiwan. I had 6+ years experience specializing in computer vision research, deep learning-based model optimization, and machine learning service integration. My research focus is mainly on face recognition, face anti‑spoofing, and 2D/3D scene understanding. Interested in revolutionizing a machine learning system from the bottom‑up, devising better problem‑solving methods for challenging tasks, and learning new technologies and tools if the need arises.
               </p>
               <p style="text-align:center">
-                <a href="https://github.com/chienyiwang">GitHub</a> &nbsp;/&nbsp;
+                <a href="mailto:chienyiwang0922@gmail.com">Email</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=05LW2DcAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/chienyiwang"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/chienyiwang">LinkedIn</a>&nbsp;/&nbsp;
+                <a href="https://twitter.com/chienyi_wang">Twitter</a>&nbsp;/&nbsp;
+                <a href="https://github.com/chienyiwang">GitHub</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
