--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,8 +97,8 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
-            <td>
-              <heading>Service</heading>
+            <td style="padding:2.5%;width:100%;vertical-align:middle">
+              <h2>Service</h2>
             </td>
           </tr>
         </table>
